--- a/CV_postdoc/EN/main.tex
+++ b/CV_postdoc/EN/main.tex
@@ -98,13 +98,13 @@
 \personalinfo{%
   % Not all of these are required!
   % You can add your own with \printinfo{symbol}{detail}
-\large{\twemoji[width=1em]{fr}\hspace{0.9em}French\hspace{1.5em}Age: 27}\hspace{1.5em}
-\phone{(+33)6 52 40 41 62}
-\location{Rennes, France} % 3 rue Robert Rême, 
-%\voiture{Permis B}
-\email{brian.sinquin@gmail.com}
-%\orcid{0000-0001-8278-394X}
-\linkedin{\href{https://linkedin.com/in/brian-sinquin/}{linkedin.com/in/brian-sinquin/}}
+  \large{\twemoji[width=1em]{fr}\hspace{0.9em}French\hspace{1.5em}Age: 27}\hspace{1.5em}
+  \phone{(+33)6 52 40 41 62}
+  \location{Rennes, France} % 3 rue Robert Rême, 
+  %\voiture{Permis B}
+  \email{brian.sinquin@gmail.com}
+  %\orcid{0000-0001-8278-394X}
+  \linkedin{\href{https://linkedin.com/in/brian-sinquin/}{linkedin.com/in/brian-sinquin/}}
   % \github{\href{https://github.com/ParadiseLab/}{ParadiseLab}}
 
   % \github{github.com/brian.sinquin}
@@ -131,18 +131,18 @@
 \cvevent{Ph.D (defended the 14/12/2023)}{INSA,  Univ. Rennes, Institut FOTON UMR 6082 \'Equipe DOP}{2020 -- 2023}{Rennes, France}
 \textbf{Direct-modulation optoelectronic oscillator. Microwave synthesis and short optical pulses generation} | \href{https://hal.science/tel-04461814v1/}{tel-04461814v1}\smallskip
 
-Supervisor: \textbf{Pr. Marco Romanelli} (marco.romanelli@univ-rennes.fr)
+Supervisor: \textbf{Dr. Marco Romanelli} (marco.romanelli@univ-rennes.fr)
 \smallskip
 \small{
-	\begin{itemize}
-		\item Realisation and optimisation of a direct-modulation \textbf{OEO} (OptoElectronic Oscillator) showing a very low phase noise 10 GHz microwave siqnal (single and dual loop architectures).
-		
-		\item Design and realization of optical pulse compression in optical fibers (dispersion, Kerr non-linearity), generation of very low jitter picosecond pulses at a rate of 10 GHz. 
-		\item Photonics (OSA, Auto-correlateur, RIN) and microwave (ESA, VNA, phase-noise, amplifiers, RF filters) characterizations in collaboration with the technical support team (engineers in optics, electronics).
-		\item Novel, accurate and simple method for the measurement of the linewidth enhancement factor (complex field reconstruction by interferometry).
-		\item Numerical simulation of a laser signal (amplitude and phase) and its nonlinear propagation in an optical fiber.
-		\item Laser wavelength locking (DFB and free space) using the PDH and Tilt-locking techniques on ULE cavities, application to new OEO architectures.
-	\end{itemize}
+  \begin{itemize}
+    \item Realisation and optimisation of a direct-modulation \textbf{OEO} (OptoElectronic Oscillator) showing a very low phase noise 10 GHz microwave siqnal (single and dual loop architectures).
+
+    \item Design and realization of optical pulse compression in optical fibers (dispersion, Kerr non-linearity), generation of very low jitter picosecond pulses at a rate of 10 GHz.
+    \item Photonics (OSA, Auto-correlateur, RIN) and microwave (ESA, VNA, phase-noise, amplifiers, RF filters) characterizations in collaboration with the technical support team (engineers in optics, electronics).
+    \item Novel, accurate and simple method for the measurement of the linewidth enhancement factor (complex field reconstruction by interferometry).
+    \item Numerical simulation of a laser signal (amplitude and phase) and its nonlinear propagation in an optical fiber.
+    \item Laser wavelength locking (DFB and free space) using the PDH and Tilt-locking techniques on ULE cavities, application to new OEO architectures.
+  \end{itemize}
 }
 
 \divider
@@ -154,11 +154,11 @@ Supervisor: \textbf{Pr. Marco Romanelli} (marco.romanelli@univ-rennes.fr)
 Supervisor : \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 \smallskip
 \small{
-	\begin{itemize}
-		\item Caracterization of a fiber LiDAR system (fibers, amplifiers, laser, photodiodes).
-		\item Numerical simulation (Matlab) of atmospheric optical propagation (Gaussian beams) and signal analysis.
-		\item Softwave development, signal sampling and analysis (Qt/C++) for real-time wind speed (Doppler effect, heterodyne detection) cartography (1D).
-	\end{itemize}
+  \begin{itemize}
+    \item Caracterization of a fiber LiDAR system (fibers, amplifiers, laser, photodiodes).
+    \item Numerical simulation (Matlab) of atmospheric optical propagation (Gaussian beams) and signal analysis.
+    \item Softwave development, signal sampling and analysis (Qt/C++) for real-time wind speed (Doppler effect, heterodyne detection) cartography (1D).
+  \end{itemize}
 }
 
 \divider
@@ -166,16 +166,16 @@ Supervisor : \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 \cvevent{1st year Master internship}{OPTIMAG (Université de Bretagne Occidentale)}{april -- june 2019}{Brest, France}
 
 \textbf{Ultra-fast measurement of optical activity by swept-wavelength polarimetry}\smallskip
-	
-	
-	
-	Supervisor : \textbf{Matthieu Dubreuil} (matthieu.dubreuil@univ-brest.fr)
-	\smallskip
+
+
+
+Supervisor : \textbf{Matthieu Dubreuil} (matthieu.dubreuil@univ-brest.fr)
+\smallskip
 \small{
-	\begin{itemize}
-		\item Modelization of a polarimetric setup (Jones formalism and Fourier analysis) which spectrally encodes the optical activity of a sample (chiral) using a swept-wavelength laser source.
-		\item Numerical simulation of the system (Mathematica) : sensibility to alignement errors and to noise sources.
-	\end{itemize}
+  \begin{itemize}
+    \item Modelization of a polarimetric setup (Jones formalism and Fourier analysis) which spectrally encodes the optical activity of a sample (chiral) using a swept-wavelength laser source.
+    \item Numerical simulation of the system (Mathematica) : sensibility to alignement errors and to noise sources.
+  \end{itemize}
 }
 
 
@@ -186,7 +186,7 @@ Supervisor : \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 \cvevent{Master of Science in Photonics}{Université de Bretagne Occidentale, Université de Rennes}{2019 -- 2020}{Brest--Rennes}
 \hfill \textit{With high honors}--\textbf{head of the class}
 \vspace{-1em}\small{
-	
+
   \begin{itemize}
     \item Integrated optics
     \item LASERs \& Telecommunication
@@ -251,7 +251,7 @@ Supervisor : \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 
   \begin{itemize}
     \item \normalsize \fullcite{Sinquin2021}
-    \medskip
+          \medskip
     \item \normalsize \fullcite{Sinquin2023}
   \end{itemize}
 
@@ -265,102 +265,102 @@ Supervisor : \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
   \cvsection{Peer reviewed international conferences}
   \cvevent{CLEO\textregistered/Europe-EQEC 2021}{Conference on Lasers and Electro-Optics}{21--25 june 2021}{Visioconference}
 
-\begin{itemize} \item \fullcite{cleo2021}   \end{itemize}
-  
-\smallskip
-  
+  \begin{itemize} \item \fullcite{cleo2021}   \end{itemize}
+
+  \smallskip
+
   {15 minutes talk / visioconference (COVID)}
-  
-  \divider
-  
-  
-  
-  
-  \cvevent{CLEO\textregistered/Europe-EQEC 2023}{Conference on Lasers and Electro-Optics}{26--30 june 2023}{Munich -- Germany}
-  
-\begin{itemize} \item \fullcite{cleo2023a}   \end{itemize}
 
-\smallskip
-  
-  
-  {15 minutes talk}
-  
   \divider
-  
-  \cvevent{CLEO\textregistered/Europe-EQEC 2023}{Conference on Lasers and Electro-Optics}{26--30 june 2023}{Munich -- Germany}
-  
-\begin{itemize} \item \fullcite{cleo2023b}   \end{itemize}
 
-\smallskip
-  
+
+
+
+  \cvevent{CLEO\textregistered/Europe-EQEC 2023}{Conference on Lasers and Electro-Optics}{26--30 june 2023}{Munich -- Germany}
+
+  \begin{itemize} \item \fullcite{cleo2023a}   \end{itemize}
+
+  \smallskip
+
+
   {15 minutes talk}
-  
+
+  \divider
+
+  \cvevent{CLEO\textregistered/Europe-EQEC 2023}{Conference on Lasers and Electro-Optics}{26--30 june 2023}{Munich -- Germany}
+
+  \begin{itemize} \item \fullcite{cleo2023b}   \end{itemize}
+
+  \smallskip
+
+  {15 minutes talk}
+
   \cvsection{National conferences (French)}
-  
+
   \cvevent{Journée du Club Optique Micro-ondes 2021}{Société Française d'Optique}{4 june 2021}{Visioconference}
-{\quote{Signaux Opto-RF très bas bruit de phase et instabilités dynamiques d’un OEO à modulation directe}}
+  {\quote{Signaux Opto-RF très bas bruit de phase et instabilités dynamiques d’un OEO à modulation directe}}
 
-\smallskip
+  \smallskip
 
-{15 minutes talk / visioconference (COVID)} | \href{https://hal.science/hal-03285993}{hal-03285993}
+  {15 minutes talk / visioconference (COVID)} | \href{https://hal.science/hal-03285993}{hal-03285993}
 
-\divider
-
-
-\cvevent{OPTIQUE Dijon 2021}{Société Française d'Optique}{5--9 july 2021}{Dijon -- France}
-{\quote{Oscillateur Opto-Électronique à modulation directe de faible bruit de phase}}
-
-\smallskip
-
-{A poster was presented during this conference} | \href{https://hal.science/hal-03284744}{hal-03284744}
-
-\divider
-
-\cvevent{OPTIQUE Nice 2022}{Société Française d'Optique}{4--8 july 2022}{Nice -- France}
-
-{\quote{Génération de peignes de fréquence et d’impulsions dans un Oscillateur Opto-Électronique à modulation directe}}
-
-\smallskip
-
-{15 minutes talk} | \href{https://hal.science/hal-03988116}{hal-03988116}
-
-\divider
+  \divider
 
 
+  \cvevent{OPTIQUE Dijon 2021}{Société Française d'Optique}{5--9 july 2021}{Dijon -- France}
+  {\quote{Oscillateur Opto-Électronique à modulation directe de faible bruit de phase}}
 
-\cvevent{Journée du Club Optique Micro-ondes 2022}{Société Française d'Optique}{13 june 2022}{Besançon -- France}
-{\quote{Oscillateur optoélectronique (OEO) générant des peignes de fréquences et des trains d’impulsions optiques}}
-\medskip
+  \smallskip
 
-{A poster was presented during this conference} | \href{https://hal.science/hal-03986413}{hal-03986413}
+  {A poster was presented during this conference} | \href{https://hal.science/hal-03284744}{hal-03284744}
 
-\divider
+  \divider
 
-\cvevent{Journée du Club Optique Micro-ondes 2023}{Société Française d'Optique}{19 june 2023}{Visioconference}
-{\quote{Direct-Modulation OEO for Optical Pulses and Frequency combs generation}}
+  \cvevent{OPTIQUE Nice 2022}{Société Française d'Optique}{4--8 july 2022}{Nice -- France}
 
-\medskip
+  {\quote{Génération de peignes de fréquence et d’impulsions dans un Oscillateur Opto-Électronique à modulation directe}}
 
-{A poster was presented during this online conference} | \href{https://hal.science/hal-04133619}{hal-04133619}
+  \smallskip
 
-\newpage
+  {15 minutes talk} | \href{https://hal.science/hal-03988116}{hal-03988116}
+
+  \divider
+
+
+
+  \cvevent{Journée du Club Optique Micro-ondes 2022}{Société Française d'Optique}{13 june 2022}{Besançon -- France}
+  {\quote{Oscillateur optoélectronique (OEO) générant des peignes de fréquences et des trains d’impulsions optiques}}
+  \medskip
+
+  {A poster was presented during this conference} | \href{https://hal.science/hal-03986413}{hal-03986413}
+
+  \divider
+
+  \cvevent{Journée du Club Optique Micro-ondes 2023}{Société Française d'Optique}{19 june 2023}{Visioconference}
+  {\quote{Direct-Modulation OEO for Optical Pulses and Frequency combs generation}}
+
+  \medskip
+
+  {A poster was presented during this online conference} | \href{https://hal.science/hal-04133619}{hal-04133619}
+
+  \newpage
 
   \cvsection{Other scientific communications}
 
-    \cvevent{Antennes et circuits: des micro-ondes aux ondes millimétriques et THz}{GDR Ondes 2021}{18 march 2021}{Visioconference}
-    
-{\quote{Low phase noise direct-modulation Optoelectronic Oscillator}}
+  \cvevent{Antennes et circuits: des micro-ondes aux ondes millimétriques et THz}{GDR Ondes 2021}{18 march 2021}{Visioconference}
 
-\smallskip
+  {\quote{Low phase noise direct-modulation Optoelectronic Oscillator}}
 
-{15 minutes talk / visioconference (COVID)} | {\color{red}\faYoutubePlay}  \href{https://www.youtube.com/watch?v=NiCSm7F7ba8}{https://www.youtube.com/watch?v=NiCSm7F7ba8}
+  \smallskip
 
-
+  {15 minutes talk / visioconference (COVID)} | {\color{red}\faYoutubePlay}  \href{https://www.youtube.com/watch?v=NiCSm7F7ba8}{https://www.youtube.com/watch?v=NiCSm7F7ba8}
 
 
 
- 
-\medskip
+
+
+
+  \medskip
   \cvsection{Teaching experience}
 
   \cvevent{Université de Rennes 1}{UFR SPM}{2020--2022}{Rennes -- France}
@@ -373,34 +373,34 @@ Supervisor : \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
   \end{itemize}
 
   \medskip
-\cvsection{Supervising}
-    
-\cvevent{1st year Master internship}{1 month and a half}{2021}{Rennes -- France}
-\vspace{-0.5em}\textbf{Laser semiconducteur stabilisé sur cavité Fabry-Perot : applications à une
-nouvelle architecture d'OEO}
+  \cvsection{Supervising}
 
-\divider
+  \cvevent{1st year Master internship}{1 month and a half}{2021}{Rennes -- France}
+  \vspace{-0.5em}\textbf{Laser semiconducteur stabilisé sur cavité Fabry-Perot : applications à une
+    nouvelle architecture d'OEO}
 
-
-\cvevent{2nd year Master project}{3 month}{2022}{Rennes -- France}
-\vspace{-0.5em}\textbf{Oscillateur Optoélectronique avec source laser stabilisée par Tilt-Locking}
-
-\divider
-    
-\cvevent{1st year Master intership}{1 month and a half}{2022}{Rennes -- France}
-\vspace{-0.5em}\textbf{Laser semiconducteur stabilisé sur
-	cavité ULE compacte: application à
-	de nouvelles architectures d’OEO}
-
-\divider
-
-    
-\cvevent{3rd year Bachelor internship}{1 month and a half}{2023}{Rennes -- France}
-\vspace{-0.5em}\textbf{Oscillateur Optoélectronique à modulation directe}
+  \divider
 
 
-    
-    
+  \cvevent{2nd year Master project}{3 month}{2022}{Rennes -- France}
+  \vspace{-0.5em}\textbf{Oscillateur Optoélectronique avec source laser stabilisée par Tilt-Locking}
+
+  \divider
+
+  \cvevent{1st year Master intership}{1 month and a half}{2022}{Rennes -- France}
+  \vspace{-0.5em}\textbf{Laser semiconducteur stabilisé sur
+    cavité ULE compacte: application à
+    de nouvelles architectures d’OEO}
+
+  \divider
+
+
+  \cvevent{3rd year Bachelor internship}{1 month and a half}{2023}{Rennes -- France}
+  \vspace{-0.5em}\textbf{Oscillateur Optoélectronique à modulation directe}
+
+
+
+
 \end{fullwidth}
 %% If the NEXT page doesn't start with a \cvsection but you'd
 %% still like to add a sidebar, then use this command on THIS
